--- a/project 1/index.html
+++ b/project 1/index.html
@@ -3,6 +3,6 @@
         <title>html structure</title>
     </head>
     <body>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, quam.</p>
     </body>
 </html>
